; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/wireless/extr_core.c_cfg80211_unregister_wdev.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/wireless/extr_core.c_cfg80211_unregister_wdev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wireless_dev = type { i32, i32, i32, i32 }
%struct.cfg80211_registered_device = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cfg80211_unregister_wdev(%struct.wireless_dev* %0) #0 {
  %2 = alloca %struct.wireless_dev*, align 8
  %3 = alloca %struct.cfg80211_registered_device*, align 8
  store %struct.wireless_dev* %0, %struct.wireless_dev** %2, align 8
  %4 = load %struct.wireless_dev*, %struct.wireless_dev** %2, align 8
  %5 = getelementptr inbounds %struct.wireless_dev, %struct.wireless_dev* %4, i32 0, i32 3
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.cfg80211_registered_device* @wiphy_to_dev(i32 %6)
  store %struct.cfg80211_registered_device* %7, %struct.cfg80211_registered_device** %3, align 8
  %8 = call i32 (...) @ASSERT_RTNL()
  %9 = load %struct.wireless_dev*, %struct.wireless_dev** %2, align 8
  %10 = getelementptr inbounds %struct.wireless_dev, %struct.wireless_dev* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @WARN_ON(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %1
  br label %45

15:                                               ; preds = %1
  %16 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %17 = getelementptr inbounds %struct.cfg80211_registered_device, %struct.cfg80211_registered_device* %16, i32 0, i32 0
  %18 = call i32 @mutex_lock(i32* %17)
  %19 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %20 = getelementptr inbounds %struct.cfg80211_registered_device, %struct.cfg80211_registered_device* %19, i32 0, i32 1
  %21 = call i32 @mutex_lock(i32* %20)
  %22 = load %struct.wireless_dev*, %struct.wireless_dev** %2, align 8
  %23 = getelementptr inbounds %struct.wireless_dev, %struct.wireless_dev* %22, i32 0, i32 1
  %24 = call i32 @list_del_rcu(i32* %23)
  %25 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %26 = getelementptr inbounds %struct.cfg80211_registered_device, %struct.cfg80211_registered_device* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = add nsw i32 %27, 1
  store i32 %28, i32* %26, align 4
  %29 = load %struct.wireless_dev*, %struct.wireless_dev** %2, align 8
  %30 = getelementptr inbounds %struct.wireless_dev, %struct.wireless_dev* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  switch i32 %31, label %36 [
    i32 128, label %32
  ]

32:                                               ; preds = %15
  %33 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %34 = load %struct.wireless_dev*, %struct.wireless_dev** %2, align 8
  %35 = call i32 @cfg80211_stop_p2p_device(%struct.cfg80211_registered_device* %33, %struct.wireless_dev* %34)
  br label %38

36:                                               ; preds = %15
  %37 = call i32 @WARN_ON_ONCE(i32 1)
  br label %38

38:                                               ; preds = %36, %32
  %39 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %40 = getelementptr inbounds %struct.cfg80211_registered_device, %struct.cfg80211_registered_device* %39, i32 0, i32 1
  %41 = call i32 @mutex_unlock(i32* %40)
  %42 = load %struct.cfg80211_registered_device*, %struct.cfg80211_registered_device** %3, align 8
  %43 = getelementptr inbounds %struct.cfg80211_registered_device, %struct.cfg80211_registered_device* %42, i32 0, i32 0
  %44 = call i32 @mutex_unlock(i32* %43)
  br label %45

45:                                               ; preds = %38, %14
  ret void
}

declare dso_local %struct.cfg80211_registered_device* @wiphy_to_dev(i32) #1

declare dso_local i32 @ASSERT_RTNL(...) #1

declare dso_local i64 @WARN_ON(i32) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @list_del_rcu(i32*) #1

declare dso_local i32 @cfg80211_stop_p2p_device(%struct.cfg80211_registered_device*, %struct.wireless_dev*) #1

declare dso_local i32 @WARN_ON_ONCE(i32) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
